k8s/eks/services/suddenrun/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suddenrun
  labels:
    app: suddenrun
spec:
  template:
    metadata:
      name: suddenrun
      labels:
        app: suddenrun
    spec:
      containers:
        - name: suddenrun
          image: k5rv/suddenrun:latest
          imagePullPolicy: Always
          ports:
            - name: tcp
              containerPort: 8081
      restartPolicy: Always
  selector:
    matchLabels:
      app: suddenrun
