k8s/eks/services/suddenrun/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suddenrun
spec:
  selector:
    app: suddenrun
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: NodePort
