k8s/eks/services/suddenrun/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suddenrun-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: suddenrun-alb
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '300'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:690837617850:certificate/324f360e-89a1-424e-b03e-ee61b206c02e
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: suddenrun.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: suddenrun
                port:
                  number: 80
          - path: /oauth2/authorization/spotify
            pathType: Exact
            backend:
              service:
                name: suddenrun
                port:
                  number: 80
          - path: /login/oauth2/code/spotify
            pathType: Exact
            backend:
              service:
                name: suddenrun
                port:
                  number: 80
          - path: /api/v1/playlists
            pathType: Exact
            backend:
              service:
                name: suddenrun
                port:
                  number: 80
          - path: /actuator/health
            pathType: Exact
            backend:
              service:
                name: suddenrun
                port:
                  number: 80
